examples/best_practices/resource_validate_image_pullpolicy_notalways_deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec: 
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: Always
