examples/best_practices/policy_validate_container_security_context.yaml
apiVersion: kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: check-container-security-context
spec:
  validationFailureAction: "audit"
  rules:
  - name: check-root-user
    exclude:
      resources:
        namespaces: 
        - kube-system
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Root user is not allowed. Set runAsNonRoot to true."
      anyPattern:
      - spec:
          securityContext:
            runAsNonRoot: true
  - name: check-privilege
    exclude:
      resources:
        namespaces: 
        - kube-system
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Privileged mode is not allowed. Set allowPrivilegeEscalatin and privileged to false"
      pattern:
        spec:
          containers:
          - name: "*"
            securityContext:
              allowPrivilegeEscalation: false
              privileged: false
