examples/best_practices/policy_validate_disallow_default_serviceaccount.yaml
apiVersion: kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: validate-disallow-default-serviceaccount
spec:
  rules:
  - name: prevent-mounting-default-serviceaccount
    exclude:
      resources:
        namespaces: 
        - kube-system
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Prevent mounting of default service account."
      pattern:
        spec:
          serviceAccountName: "!default"
