examples/best_practices/policy_validate_image_latest_ifnotpresent_deny.yaml
apiVersion : kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: validate-image
spec:
  rules:
  - name: validate-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "imagePullPolicy 'IfNotPresent' forbidden with image tag 'latest'"    
      pattern:
        spec:
          containers:
          - (image): "*:latest"
            imagePullPolicy: "!IfNotPresent"
