examples/best_practices/policy_validate_image_tag_notspecified_deny.yaml
apiVersion : kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: validate-image-tag-notspecified
spec:
  rules:
  - name: image-tag-notspecified
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "image tag not specified"  
      pattern:
        spec:
          containers:
          - image: "*:*"
