examples/best_practices/policy_validate_pod_resources.yaml
apiVersion: kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: check-resources
spec:
  # validationFailureAction: "audit"
  rules:
  - name: check-pod-resources
    message: "CPU and memory resource requests and limits are required"
    match:
      resources:
        kinds:
        - Pod
        name: myapp-pod
    validate:
      pattern:
        spec:
          containers:
          - name: "*"
            resources:
              requests:
                memory: "?*"
                cpu: "?*"
              limits:
                memory: "?*"
                cpu: "?*"
