examples/best_practices/policy_validate_whitelist_image_registries.yaml
apiVersion : kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: validate-image-registry
spec:
  rules:
  - name: validate-image-registry
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "White list of image registries"
      anyPattern:
      - spec:
          containers:
          - image: "https://private.registry.io/*"
      - spec:
          containers:
          - image: "*nirmata*"
