examples/best_practices/validate_default_namespace.yaml
apiVersion: kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  name: validate-namespace
spec:
  rules:
  - name: check-default-namespace
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "A namespace is required"
      anyPattern:
        - metadata:
            namespace: "?*"
        - metadata:
            namespace: "!default"
