examples/best_practices/validate_image_tag.yaml
apiVersion : kyverno.io/v1alpha1
kind: ClusterPolicy
metadata:
  annotations:
    kyverno.io/category: images
    kyverno.io/description: |
      ......
  name: validate-image
spec:
  rules:
  - name: validate-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "An image tag is required"    
      pattern:
        spec:
          containers:
          - image: "*:*"  
  - name: validate-latest
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "imagePullPolicy 'Always' required with tag 'latest'"    
      pattern:
        spec:
          containers:
          - (image): "*latest"
            imagePullPolicy: Always
